@@ -1,3 +1,8 @@
+2019-12-16 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/widgets/geda_entry.c: Rename function geda_entry_activate ->
+      geda_entry_process_entry.
+
 2019-11-04 Wiley E. Hill <wileyhill@gmail.com>
 
     * include/geda_gtk_compat.h: Add macro gtk_dialog_get_content_area for Gtk<3.0.
